Fix z-index.

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -10,14 +10,14 @@ div#logo {
   background-color:#fff;
   margin:0;
   box-shadow: 2px 2px 5px 1px #000000;
-  z-index: 0;
+  z-index: 3;
 }
 
 div#server-status {
   position: relative;
   background-color:#fff;
   box-shadow: 2px 2px 5px 1px #000000;
-  z-index: -1;
+  z-index: 2;
 }
 
 div#server-status div.status {
@@ -30,7 +30,7 @@ div#badge {
   background-color:#fff;
   box-shadow: 2px 2px 5px 1px #000000;
   padding:10px;
-  z-index: -2;
+  z-index: 1;
 }
 
 div#badge img {
